--- a/templates/base.html
+++ b/templates/base.html
@@ -42,26 +42,39 @@
 
             <div class="collapse navbar-collapse" id="navbarContent">
 
-                <ul class="navbar-nav ms-auto">
+    <!-- MENU ESQUERDO -->
+    <ul class="navbar-nav me-auto">
+        <li class="nav-item">
+            <a class="nav-link text-white" href="{{ url_for('home') }}">
+                Home
+            </a>
+        </li>
 
-                    {% if current_user.is_authenticated %}
-                    <li class="nav-item d-flex align-items-center text-white me-3">
-                        <i class="bi bi-person-circle me-2"></i>
-                        {{ current_user.name }}
-                    </li>
+        <li class="nav-item">
+            <a class="nav-link text-white" href="{{ url_for('dashboard') }}">
+                Dashboard
+            </a>
+        </li>
+    </ul>
 
-                    <li class="nav-item">
-                        <a class="btn btn-outline-light btn-sm" href="{{ url_for('logout') }}">
-                            <i class="bi bi-box-arrow-right"></i> Sair
-                        </a>
-                    </li>
+    <!-- MENU DIREITO (usuário + logout) -->
+    <ul class="navbar-nav ms-auto">
+        {% if current_user.is_authenticated %}
+        <li class="nav-item d-flex align-items-center text-white me-3">
+            <i class="bi bi-person-circle me-2"></i>
+            {{ current_user.name }}
+        </li>
 
-                    {% endif %}
+        <li class="nav-item">
+            <a class="btn btn-outline-light btn-sm" href="{{ url_for('logout') }}">
+                <i class="bi bi-box-arrow-right"></i> Sair
+            </a>
+        </li>
+        {% endif %}
+    </ul>
 
-                </ul>
+</div>
 
-            </div>
-        </div>
     </nav>
 
     <!-- CONTEÚDO DAS PÁGINAS -->
